[project]
name = "comfyui-resynthesizer"
description = "This repository is a quick port of [a/Resynthesizer](https://github.com/bootchk/resynthesizer) to ComfyUI.\nResynthesizer is the open-source implementation of a texture generation technique proposed by Paul Harrison in 2005, especially useful for removing an object from an image (inpainting), which is most likely close to what Photoshop uses to for the content aware fill feature. Note that this is not using a diffusion model to inpaint, as opposed to many techniques of today, which makes it very fast and predictable, but sometimes yields worse results."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/brayevalerien/ComfyUI-resynthesizer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "val"
DisplayName = "ComfyUI-resynthesizer"
Icon = ""
